<resources>
    <string name="app_name">LocationTracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_view_password">Password</string>
    <string name="login_view_email">Email</string>
    <string name="sign_in_header">Sign In</string>
    <string name="log_in_btn">log in</string>
    <string name="create_account_btn">Create account</string>
    <string name="sign_up_header">Sign Up</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">Password</string>
    <string name="create_account_btn2">create account</string>
    <string name="email_helper_text">Enter a valid email</string>
    <string name="password_helper_text">Use at least one numeral and eight characters</string>
    <string name="name_helper_text">Name must be equal or greater 2 characters</string>
    <string name="invalid_credentials">The email or password is empty or invalid</string>
    <string name="sign_out_menu_item">Sign Out</string>

</resources>